--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+		<meta charset="UTF-8">
+		<title>{% block title %}Accueil{% endblock %} </title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
+		<!-- Feuilles de styles -->
+		<link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
+        {% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+
+		<!-- Fichiers JS -->
+		<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}" defer></script>
+		{% block javascripts %}{% endblock %}
+		<script src="{{ asset('assets/js/scripts.js') }}" defer></script>
+	</head>
     <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary " bg-dark border-bottom border-body" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ path('app_user_new') }}">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               {% if app.user %}
+
+        <li class="nav-item">
+        
+       <a class="nav-link active" aria-current="page" href="{{ path('app_user_index') }}">List</a>
+        </li>
+        {% endif %}
+        
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+       
+         {% if app.user %}
+       <li class="nav-item">
+
+                      <a class="nav-link active" aria-current="page" href="{{ path('app_logout') }}">Logout</a>
+        </li>
+                {% else  %}
+       <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">Login</a>
+        </li>
+         {% endif %}
+         </ul>
+    </div>
+  </div>
+</nav>
         {% block body %}{% endblock %}
     </body>
+
 </html>
