--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>User</h1>
 
-    <table class="table">
+    <table  border="2">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -16,12 +16,12 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                <th>Prénom</th>
+                <td>{{ user.firstname}}</td>
             </tr>
             <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
+                <th>Nom</th>
+                <td>{{ user.lastname}}</td>
             </tr>
         </tbody>
     </table>
