--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,4 +1,31 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<fieldset class="mb-3">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    {{ form_label(form.lastname, 'Nom', {'label_attr': {'class': 'form-label'}}) }}
+                    {{ form_widget(form.lastname, {'attr': {'class': 'form-control', 'required': 'required'}}) }}
+                </div>
+                <div class="mb-3">
+                    {{ form_label(form.firstname, 'Prénom', {'label_attr': {'class': 'form-label'}}) }}
+                    {{ form_widget(form.firstname, {'attr': {'class': 'form-control', 'required': 'required'}}) }}
+                </div>
+                <div class="mb-3">
+                    {{ form_label(form.email, 'Email', {'label_attr': {'class': 'form-label'}}) }}
+                    {{ form_widget(form.email, {'attr': {'class': 'form-control', 'required': 'required'}}) }}
+                </div>
+                <div class="form-check">
+                    {{ form_label(form.agreement, 'Checkbox', {'label_attr': {'class': 'form-label'}}) }}
+                    {{ form_widget(form.agreement, {'attr': {'class': 'form-check-input'}}) }}
+                </div>
+            </div>
+        </div>
+    </div>
+</fieldset>   
+
+<div  class="text-center"> <!-- Center the button -->
+    <button class="uppercase mt-15 bg-blue-500 text-gray-100 text-lg w-1/5 mt-10 font-extrabold py-4 px-8 rounded-3xl btn btn-primary" type="submit">Ajouter</button>
+</div>
 {{ form_end(form) }}
