--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -6,8 +6,9 @@
     <h1>Edit User</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+<button type="button" class="btn btn-secondary">    <a href="{{ path('app_user_index') }}">back to list</a>
+</button>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
