--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,41 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+
+{% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+<div  class="text-center">
+    <h1>Formulaire</h1>
+</div>
+    {{ include('user/_form.html.twig') }}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
-                    <a href="{{ path('app_user_delete', {'id': user.id}) }}">delete</a>
 
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_user_new') }}">Create new</a>
 {% endblock %}
